# proyecto_compiladores

./: .gitignore  README.md  proyecto.cabal  stack.yaml
app/: Main.hs
reporte/latex/: Portada.tex  Reporte.tex
reporte/latex/contenidos/: p1.tex  p10.tex  p11.tex  p2.tex  p3.tex  p4.tex  p5.tex  p6.tex  p7.tex  p8.tex  p9.tex
samples/: ejemplo1.md  ejemplo2.md  ejemplo3.md  ejemplo4.md  ejemplo5.md
specs/: IMP.md
src/: AFD.hs  AFDMin.hs  AFN.hs  AFNToAFD.hs  AFNe.hs  AFNeToAFN.hs  LICENSE  Lexer.hs  MDD.hs  RegexToAFNe.hs  RegularExpression.hs
