cabal-version:       2.4
name:                proyecto
version:             0.1.0.0
build-type:          Simple

executable src
  main-is:             Main.hs
  hs-source-dirs:      app, src
  default-language:    Haskell2010

  build-depends:
       base ^>=4.18
    , containers ^>=0.6
    , split ^>=0.2.3
    , matrix ^>=0.3.6
    , directory
    , filepath

  other-modules:
      AFD
      AFN
      AFNToAFD
      AFNe
      AFNeToAFN
      RegexToAFNe
      RegularExpression
      AFDMin
      MDD
      Lexer
      


      

